For the latest news, visit the SparForte web site.

SparForte 2.1.1's focus was bringing SparForte into Jenkins continuous integration.

CHANGES SINCE 2.1

1. New: Can now subtract one calendar.time value from another.

2. New: New examples: game_24.sp, string_prepend.sp, sumseries.sp, sumsq.sp, ternary_logic.sp, twelve_days.sp, time_function.sp

3. Fix: Anonymous array element type is treated as applied to eliminate concrete/abstract error.

4. New: OS package functions.  os.pid, equivalent to Bourne shell $$. os.error_string (strerror) and documentation fixed.

5. Fix: instead of "identifier not declared", now get "too few parameter" when calling a user function with too few parameters.  Might be a more efficient way to implement this.

6. New: abstract procedures and subprograms [incomplete, untested].

7. Fix: functions without a return value statement produce an error.

8. New: limited arrays, records and anonymous arrays.
